# keyzforme

./: .gitignore  .lintstagedrc.mjs  AGENTS.md  CLAUDE.md  LESSONS.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.claude/commands/: braindump.md  check.md  fresh.md  kit-add.md  learn.md  lesson.md  quick-test.md  save-progress.md  start-session.md
api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
api/app/: auth.py  config.py  db.py  main.py
api/app/routers/: health.py
api/migrations/: env.py
api/migrations/versions/: a7785ede2dea_baseline_no_app_tables_yet.py
api/tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_smoke.py
docs/: CONVENTIONS.md  PRD.md  QUALITY-GATES.md  SOFTWARE-FOUNDATIONS.md
docs/architecture/: backend.md
docs/learning/: 2026-06-19-deploying-with-vercel.md  2026-06-19-favicons-and-dark-mode.md  2026-color-direction-research.md  README.md
docs/superpowers/plans/: 2026-06-19-slice-0-1-foundation-homepage.md  2026-06-19-slice-0-backend-foundation.md
docs/superpowers/specs/: 2026-06-19-contact-form-design.md
mockups/: color-palettes.html  design-direction.html  homepage.html  typography.html
scripts/: check-tokens.mjs
src/app/: globals.css  layout.tsx
web/: package-lock.json
web/src/app/: globals.css  manifest.json  page.tsx
web/src/components/site/: Audience.tsx  Container.tsx  CtaBand.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  Marketplace.tsx  Nav.tsx  ReadinessCard.tsx  SectionHeading.tsx  TrustStrip.tsx  button-styles.ts
